clusters/cluster.boem/coc-bot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coc-bot
  namespace: default
spec:
  selector:
    matchLabels:
      app: coc-bot
  template:
    metadata:
      labels:
        app: coc-bot
    spec:
      containers:
      - name: coc-bot
        image: stingalleman/coc-bot:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8020
          protocol: TCP
