clusters/cluster.boem/coc-bot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coc-bot
  namespace: discord-bots
spec:
  selector:
    app: coc-bot
  ports:
  - port: 8020
    targetPort: 8020
