clusters/cluster.boem/coc-bot/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: coc-bot
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`discord.stingalleman.nl`)
      priority: 10
      middlewares:
        - name: upgrade-scheme
          namespace: default
      services:
        - kind: Service
          name: coc-bot
          namespace: default
          passHostHeader: true
          port: 80
